--- a/Convolution_Neural_Networks.ipynb
+++ b/Convolution_Neural_Networks.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "Convolution_Neural_Networks.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -50,13 +49,13 @@
         "- <a href=\"#p3\">Part 3:</a> CNN with Data Augmentation\n",
         "\n",
         "\n",
-        "You will apply three different CNN models to a binary image classification model using Keras. Classify images of Mountains (`./data/train/mountain/*`) and images of forests (`./data/train/forest/*`). Treat mountains as the positive class (1) and the forest images as the negative (zero). \n",
+        "We will apply three different CNN models to a binary image classification model using Keras. Classify images of Mountains (`./data/train/mountain/*`) and images of forests (`./data/train/forest/*`). Treat mountains as the positive class (1) and the forest images as the negative (zero).\n",
         "\n",
         "|Mountain (+)|Forest (-)|\n",
         "|---|---|\n",
-        "|![](./data/train/mountain/art1131.jpg)|![](./data/validation/forest/cdmc317.jpg)|\n",
+        "|![](https://github.com/Moly-malibu/Convolutional-Neural-Network/blob/main/data/train/mountain/art1131.jpg?raw=1)|![](https://github.com/Moly-malibu/Convolutional-Neural-Network/blob/main/data/validation/forest/cdmc317.jpg?raw=1)|\n",
         "\n",
-        "The problem is relatively difficult given that the sample is tiny: there are about 350 observations per class. This sample size might be something that you can expect with prototyping an image classification problem/solution at work. Get accustomed to evaluating several different possible models."
+        "The problem is relatively difficult given that the sample is tiny: there are about 350 observations per class. This sample size might be something that we can expect with prototyping an image classification problem/solution at work. Get accustomed to evaluating several different possible models."
       ]
     },
     {
@@ -84,14 +83,14 @@
         "\n",
         "```\n",
         "\n",
-        "The `include_top` parameter in `ResNet50` will remove the full connected layers from the ResNet model. The next step is to turn off the training of the ResNet layers. We want to use the learned parameters without updating them in future training passes. \n",
+        "The `include_top` parameter in `ResNet50` will remove the full connected layers from the ResNet model. The next step is to turn off the training of the ResNet layers. We want to use the learned parameters without updating them in future training passes.\n",
         "\n",
         "```python\n",
         "for layer in resnet.layers:\n",
         "    layer.trainable = False\n",
         "```\n",
         "\n",
-        "Using the Keras functional API, we will need to additional additional full connected layers to our model. We we removed the top layers, we removed all preivous fully connected layers. In other words, we kept only the feature processing portions of our network. You can expert with additional layers beyond what's listed here. The `GlobalAveragePooling2D` layer functions as a really fancy flatten function by taking the average of each of the last convolutional layer outputs (which is two dimensional still). \n",
+        "Using the Keras functional API, we will need to additional additional full connected layers to our model. We we removed the top layers, we removed all preivous fully connected layers. In other words, we kept only the feature processing portions of our network. You can expert with additional layers beyond what's listed here. The `GlobalAveragePooling2D` layer functions as a really fancy flatten function by taking the average of each of the last convolutional layer outputs (which is two dimensional still).\n",
         "\n",
         "```python\n",
         "x = resnet.output\n",
@@ -101,10 +100,10 @@
         "model = Model(resnet.input, predictions)\n",
         "```\n",
         "\n",
-        "Your assignment is to apply the transfer learning above to classify images of Mountains (`./data/train/mountain/*`) and images of forests (`./data/train/forest/*`). Treat mountains as the positive class (1) and the forest images as the negative (zero). \n",
+        "To apply the transfer learning above to classify images of Mountains (`./data/train/mountain/*`) and images of forests (`./data/train/forest/*`). Treat mountains as the positive class (1) and the forest images as the negative (zero).\n",
         "\n",
-        "Steps to complete assignment: \n",
-        "1. Load in Image Data into numpy arrays (`X`) \n",
+        "Steps to complete assignment:\n",
+        "1. Load in Image Data into numpy arrays (`X`)\n",
         "2. Create a `y` for the labels\n",
         "3. Train your model with pre-trained layers from resnet\n",
         "4. Report your model's accuracy"
@@ -129,7 +128,7 @@
       "source": [
         "### Download & Summarize the Data\n",
         "\n",
-        "This step is completed for you. Just run the cells and review the results. "
+        "This step is completed for you. Just run the cells and review the results."
       ]
     },
     {
@@ -252,7 +251,7 @@
       "source": [
         "### Keras `ImageGenerator` to Process the Data\n",
         "\n",
-        "This step is completed for you, but please review the code. The `ImageGenerator` class reads in batches of data from a directory and pass them to the model one batch at a time. Just like large text files, this method is advantageous, because it stifles the need to load a bunch of images into memory. \n",
+        "This step is completed for you, but please review the code. The `ImageGenerator` class reads in batches of data from a directory and pass them to the model one batch at a time. Just like large text files, this method is advantageous, because it stifles the need to load a bunch of images into memory.\n",
         "\n",
         "Check out the documentation for this class method: [Keras `ImageGenerator` Class](https://keras.io/preprocessing/image/#imagedatagenerator-class). You'll expand it's use in the third assignment objective."
       ]
@@ -979,7 +978,7 @@
       "source": [
         "# Custom CNN Model\n",
         "\n",
-        "In this step, write and train your own convolutional neural network using Keras. You can use any architecture that suits you as long as it has at least one convolutional and one pooling layer at the beginning of the network - you can add more if you want. "
+        "In this step, write and train your own convolutional neural network using Keras. You can use any architecture that suits you as long as it has at least one convolutional and one pooling layer at the beginning of the network - you can add more if you want."
       ]
     },
     {
@@ -988,7 +987,7 @@
         "id": "FKvR47oeGLAB"
       },
       "source": [
-        "from tensorflow.keras.models import Sequential, Model  \n",
+        "from tensorflow.keras.models import Sequential, Model\n",
         "from tensorflow.keras.layers import Dense, Conv2D, MaxPooling2D, Flatten, Dropout\n",
         "from tensorflow.keras.callbacks import EarlyStopping"
       ],
@@ -1222,11 +1221,11 @@
       "source": [
         "# Custom CNN Model with Image Manipulations\n",
         "\n",
-        "To simulate an increase in a sample of image, you can apply image manipulation techniques: cropping, rotation, stretching, etc. Luckily Keras has some handy functions for us to apply these techniques to our mountain and forest example. Simply, you should be able to modify our image generator for the problem. Check out these resources to help you get started: \n",
+        "To simulate an increase in a sample of image, you can apply image manipulation techniques: cropping, rotation, stretching, etc. Luckily Keras has some handy functions for us to apply these techniques to our mountain and forest example. Simply, you should be able to modify our image generator for the problem. Check out these resources to help you get started:\n",
         "\n",
         "1. [Keras `ImageGenerator` Class](https://keras.io/preprocessing/image/#imagedatagenerator-class)\n",
         "2. [Building a powerful image classifier with very little data](https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html)\n",
-        " "
+        ""
       ]
     },
     {
@@ -1516,7 +1515,7 @@
         "id": "XLzzn7scPrhC"
       },
       "source": [
-        "#Picture "
+        "#Picture"
       ]
     },
     {
@@ -1811,7 +1810,7 @@
         "    plt.grid(False)\n",
         "    plt.imshow(image, cmap=\"gray\")\n",
         "    plt.title(label)\n",
-        "    i += 1 \n",
+        "    i += 1\n",
         "\n",
         "plt.show()"
       ],
